// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:inputDate 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  date
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-DateControl is-date cxd-Form-control"
          >
            <div
              class="cxd-DatePicker"
              tabindex="0"
            >
              <input
                autocomplete="off"
                class="cxd-DatePicker-input"
                placeholder="请选择日期"
                type="text"
                value="2019-06-07"
              />
              <a
                class="cxd-DatePicker-clear"
              >
                <icon-mock
                  classname="icon icon-input-clear"
                  icon="input-clear"
                />
              </a>
              <a
                class="cxd-DatePicker-toggler"
              >
                <icon-mock
                  classname="icon icon-date"
                  icon="date"
                />
              </a>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate compatible with format & inputFormat 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date1"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateControl is-date cxd-Form-control"
                    >
                      <div
                        class="cxd-DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="19/08-2022"
                        />
                        <a
                          class="cxd-DatePicker-clear"
                        >
                          <icon-mock
                            classname="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="cxd-DatePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date1"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-Form-static"
                    >
                      <div
                        class="cxd-Form-control"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          今天是2022年, 08月, 19日
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date2"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateControl is-date cxd-Form-control"
                    >
                      <div
                        class="cxd-DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="19/08-2022"
                        />
                        <a
                          class="cxd-DatePicker-clear"
                        >
                          <icon-mock
                            classname="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="cxd-DatePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date2"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-Form-static"
                    >
                      <div
                        class="cxd-Form-control"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          今天是2022年, 08月, 19日
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with clearable: clearable false 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateControl is-date cxd-Form-control"
                    >
                      <div
                        class="cxd-DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="2022-08-19"
                        />
                        <a
                          class="cxd-DatePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with clearable: clearable true 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateControl is-date cxd-Form-control"
                    >
                      <div
                        class="cxd-DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value=""
                        />
                        <a
                          class="cxd-DatePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-Form-static"
                    >
                      <div
                        class="cxd-Form-control"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          <span
                            class="text-muted"
                          >
                            -
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with valueFormat & displayFormat 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateControl is-date cxd-Form-control"
                    >
                      <div
                        class="cxd-DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="19/08-2022"
                        />
                        <a
                          class="cxd-DatePicker-clear"
                        >
                          <icon-mock
                            classname="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="cxd-DatePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-Form-static"
                    >
                      <div
                        class="cxd-Form-control"
                      >
                        <span
                          class="cxd-PlainField"
                        >
                          今天是2022年, 08月, 19日
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
